# deeznuts-downloader

./: Cargo.toml
src/: app.rs  downloader.rs  log.rs  main.rs  tui.rs
