[package]
name = "deeznuts-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
deezer = { git = "https://github.com/ElMoustacho/deezer-rs" }
deezer_downloader = { git = "https://github.com/ElMoustacho/deezer_downloader" }
directories = "5.0.1"
futures = "0.3.28"
ratatui = "0.23.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tui-input = "0.8.0"
